--- a/package.json
+++ b/package.json
@@ -55,5 +55,5 @@
     "@types/styled-components": "^5.1.25",
     "gh-pages": "^4.0.0"
   },
-  "homepage": "https://resistan.com/reactcoin/"
+  "homepage": "https://resistan.github.io/reactcoin/"
 }
