--- a/package.json
+++ b/package.json
@@ -50,6 +50,6 @@
     "@types/react-helmet": "^6.1.5",
     "@types/react-query": "^1.2.9",
     "@types/recoil": "^0.0.9",
-    "@types/styled-components": "^5.1.25",
+    "@types/styled-components": "^5.1.25"
   }
 }
